// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryPanel renders correctly with full selection 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 6px;
  user-select: none;
}

.c7 {
  font-family: var(--font-heading);
  font-style: italic;
  color: color-mix(in srgb, var(--color-brand-rose) 45%, transparent);
  line-height: 1;
  font-size: 13px;
}

.c0 {
  border-radius: 24px;
  border: 1px solid var(--color-border);
  background: var(--color-surface);
  padding: 24px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.c1 {
  font-family: var(--font-heading);
  font-size: 20px;
  font-weight: 300;
  color: var(--color-text-primary);
}

.c2 {
  font-size: 11px;
  color: var(--color-text-muted);
  margin-top: 2px;
}

.c3 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c5 {
  aspect-ratio: 1;
  border-radius: 12px;
  overflow: hidden;
  position: relative;
}

.c8 {
  font-size: 9px;
  text-transform: uppercase;
  letter-spacing: 0.12em;
  color: var(--color-text-muted);
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  height: 4px;
  border-radius: 99px;
  background: var(--color-border);
  overflow: hidden;
}

.c10 {
  height: 100%;
  border-radius: 99px;
  background: var(--color-brand-rose);
  width: 100%;
  transition: width 0.5s ease;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 12px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 12px;
  font-size: 14px;
  border-bottom: 1px solid var(--color-border);
  padding-bottom: 12px;
}

.c12:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.c13 {
  color: var(--color-text-muted);
  flex-shrink: 0;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 0.08em;
  font-weight: 500;
  padding-top: 2px;
}

.c14 {
  color: var(--color-text-primary);
  text-align: right;
  font-family: var(--font-heading);
  font-size: 16px;
  line-height: 1.2;
}

.c15 {
  border-top: 2px solid var(--color-border-strong);
  padding-top: 16px;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.c16 {
  font-size: 14px;
  color: var(--color-text-secondary);
  font-weight: 500;
}

.c17 {
  font-family: var(--font-heading);
  font-size: 24px;
  color: var(--color-text-primary);
}

<div>
  <aside
    aria-label="summary"
    class="c0"
  >
    <div
      class=""
    >
      <h3
        class="c1"
      >
        summary
      </h3>
      <p
        class="c2"
      >
        3
        /
        3
         
        stepsCompleted
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Light Coverage
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Smoky Eye
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Nude Lip
        </p>
      </div>
    </div>
    <div
      aria-label="progress"
      aria-valuemax="3"
      aria-valuemin="0"
      aria-valuenow="3"
      class="c9"
      role="progressbar"
    >
      <div
        class="c10"
      />
    </div>
    <ul
      class="c11"
    >
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Base
        </span>
        <span
          class="c14"
        >
          Light Coverage
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Eyes
        </span>
        <span
          class="c14"
        >
          Smoky Eye
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Lips
        </span>
        <span
          class="c14"
        >
          Nude Lip
        </span>
      </li>
    </ul>
    <div
      class="c15"
    >
      <span
        class="c16"
      >
        totalLabel
      </span>
      <span
        class="c17"
      >
        €15
      </span>
    </div>
  </aside>
</div>
`;

exports[`SummaryPanel renders correctly with no selection 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 6px;
  user-select: none;
}

.c7 {
  font-family: var(--font-heading);
  font-style: italic;
  color: color-mix(in srgb, var(--color-brand-rose) 45%, transparent);
  line-height: 1;
  font-size: 13px;
}

.c0 {
  border-radius: 24px;
  border: 1px solid var(--color-border);
  background: var(--color-surface);
  padding: 24px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.c1 {
  font-family: var(--font-heading);
  font-size: 20px;
  font-weight: 300;
  color: var(--color-text-primary);
}

.c2 {
  font-size: 11px;
  color: var(--color-text-muted);
  margin-top: 2px;
}

.c3 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c5 {
  aspect-ratio: 1;
  border-radius: 12px;
  overflow: hidden;
  position: relative;
}

.c8 {
  font-size: 9px;
  text-transform: uppercase;
  letter-spacing: 0.12em;
  color: var(--color-text-muted);
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  height: 4px;
  border-radius: 99px;
  background: var(--color-border);
  overflow: hidden;
}

.c10 {
  height: 100%;
  border-radius: 99px;
  background: var(--color-brand-rose);
  width: 0%;
  transition: width 0.5s ease;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 12px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 12px;
  font-size: 14px;
  border-bottom: 1px solid var(--color-border);
  padding-bottom: 12px;
}

.c12:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.c13 {
  color: var(--color-text-muted);
  flex-shrink: 0;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 0.08em;
  font-weight: 500;
  padding-top: 2px;
}

.c14 {
  color: var(--color-text-primary);
  text-align: right;
  font-family: var(--font-heading);
  font-size: 16px;
  line-height: 1.2;
}

.c15 {
  color: var(--color-border-strong);
  font-size: 11px;
  font-style: italic;
  font-family: sans-serif;
}

.c16 {
  border-top: 2px solid var(--color-border-strong);
  padding-top: 16px;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.c17 {
  font-size: 14px;
  color: var(--color-text-secondary);
  font-weight: 500;
}

.c18 {
  font-family: var(--font-heading);
  font-size: 24px;
  color: var(--color-text-primary);
}

<div>
  <aside
    aria-label="summary"
    class="c0"
  >
    <div
      class=""
    >
      <h3
        class="c1"
      >
        summary
      </h3>
      <p
        class="c2"
      >
        0
        /
        3
         
        stepsCompleted
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Base
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Eyes
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Lips
        </p>
      </div>
    </div>
    <div
      aria-label="progress"
      aria-valuemax="3"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c9"
      role="progressbar"
    >
      <div
        class="c10"
      />
    </div>
    <ul
      class="c11"
    >
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Base
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Eyes
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Lips
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
    </ul>
    <div
      class="c16"
    >
      <span
        class="c17"
      >
        totalLabel
      </span>
      <span
        class="c18"
      >
        included
      </span>
    </div>
  </aside>
</div>
`;
